fix logo alignment

--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,6 @@
   text-align: center;
 }
 
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding-top: 50px;
-}
-
 .input {
   height: 40px;
   margin: 12px;
